Metadata/objects/Usage_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice Line against which this usage was billed</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>Invoice_Lines__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice against which the usages are billed</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Usages billed in this Invoice</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Name__c</fullName>
        <formula>Invoice_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the usage charge against the Master Order where the current usage units are rolled up to.</description>
        <inlineHelpText>Points to the usage charge against the Master Order where the current usage units are rolled up to.</inlineHelpText>
        <label>Master Usage</label>
        <referenceTo>Usage_Charge__c</referenceTo>
        <relationshipLabel>Child Usages</relationshipLabel>
        <relationshipName>MasterUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Job_Rate_Plan_Charge__c.Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Order__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Charge_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Un-billed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled-Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Usage</label>
    <nameField>
        <displayFormat>USG-{000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>